<?xml version="1.0"?>
<package format="2">
  <name>trajectory_prediction</name>
  <version>0.0.0</version>
  <description>The trajectory_prediction package</description>
  <maintainer email="mfinean@robots.ox.ac.uk">Mark Finean</maintainer>
  <license>BSD-3-Clause</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>finean_msgs</depend>
 
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
